--- a/app/assets/templates/listings/index/search_results.jst.ejs
+++ b/app/assets/templates/listings/index/search_results.jst.ejs
@@ -1,12 +1,16 @@
-<header class="">
+<header>
   <h3>
-    Displaying <%= accounting.formatNumber(CarListing.listings.listingsCount) %> listings
+    Displaying
+    <%= accounting.formatNumber(CarListing.indexListings.listingsCount) %>
+    listings
   </h3>
 </header>
 
-<section class="listings">
+<div>
+  <section class="listings">
 
-</section>
+  </section>
+</div>
 
 <h2 id="end-of-page">
   Fetching more listings
