--- a/app/assets/stylesheets/listings.css.scss
+++ b/app/assets/stylesheets/listings.css.scss
@@ -26,7 +26,7 @@ section.top-info > section.pics > div.main-pic {
   border-bottom: 1px solid #333333;
 }
 
-div.main-pic > img {
+div.main-pic img {
   width: 100%;
   height: auto;
   display: block;
@@ -37,7 +37,6 @@ img.car-pic:hover {
 }
 
 section.pics > ul.thumbs {
-//  margin: 4px;
   list-style: none;
   display: block;
   margin: 8px;
@@ -46,12 +45,16 @@ section.pics > ul.thumbs {
 ul.thumbs > li {
   display: block;
   float: left;
-  padding: 2px;
+  border: 3px solid black;
   width: 50px;
   height: 50px;
+  margin: 0 3px;
 }
 
-ul.thumbs > li > img {
+ul.thumbs > li:first-child { margin-left: 0; };
+ul.thumbs > li:last-child { margin-right: 0;}
+
+ul.thumbs > li img {
   width: 100%;
   height: 100%;
 }
@@ -252,69 +255,13 @@ section.description textarea#listing_description {
   font-size: 15px;
 }
 
-div.lightbox {
-  position: fixed;
-  width: 100%;
-  height: 100%;
-  background: rgba(0,0,0,0.85);
-  z-index: 10;
-  display: none;
-  overflow-y: scroll;
-}
-
-div.lightbox.show {
-  display: block;
-}
-
-div.lightbox > div.viewport {
-  z-index: 1;
-  margin: 100px auto;
-  width: 600px;
-  overflow: hidden;
-  position: relative;
-  box-shadow: 0 0 5px #FFFFFF, 10px 0px 25px #000000, -10px 0px 25px #000000,
-                               0px 10px 25px #000000, 0px -10px 25px #000000;
-}
-
-div.viewport > div#scroll-viewport-left {
-  position: absolute;
-  height: 100%;
-  width: 50%;
-  float: left;
-  z-index: 2;
-}
-
-div.viewport > div#scroll-viewport-right {
-  position: absolute;
-  height: 100%;
-  width: 50%;
-  margin-left: 50%;
-  z-index: 2;
-}
-
-div.lightbox ul {
-  position: relative;
-  display: block;
-  left: 0;
-}
-
-div.lightbox ul > li {
-  display: block;
-  float: left;
-  width: 600px;
-}
-
-div.viewport > ul > li > img {
-  width: 600px;
-  height: auto;
-}
-
 .info #recaptcha_widget {
   display: block !important;
 }
 
 .info form.phone {
-  display: none;
+  display: none !important;
+  clear: both;
   background-color: white;
   padding: 5px;
   border: 1px solid #cccccc;
@@ -323,7 +270,6 @@ div.viewport > ul > li > img {
 
 .info form.phone.show {
   display: block !important;
-  clear: both;
 }
 
 .info .recaptcha-widget-main {
@@ -358,17 +304,22 @@ div.viewport > ul > li > img {
 }
 
 .info #recaptcha_widget input[type="submit"] {
+  display: block;
+  float: left;
   font-size: 14px;
   margin: 0;
   border-bottom: 0;
 }
 
 .info #recaptcha_response_field {
+  margin: 0 4px 0 0;
+  display: block;
+  float: left;
   font-size: 14px;
 }
 
 .info .recaptcha_only_if_incorrect_sol {
-//  display: none !important;
+  display: none;
   color: red;
   font-weight: 900;
 }
@@ -381,6 +332,17 @@ div.viewport > ul > li > img {
 
 .info #recaptcha_widget nav i {
   margin: 0px;
+}
+
+form.phone .spinner {
+  display: none;
+  float: left;
+  width: 22px;
+  margin: 0 0 0 5px;
+}
+
+form.phone.busy .spinner {
+  display: block;
 }
 
 
