--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,22 +2,20 @@
 <html>
 <head>
   <title><%= @title %>Tommy's Cars</title>
+
+  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald|Open+Sans">
+
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
-  <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Oswald|Open+Sans">
+
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script>
+  <!-- <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script> -->
+  <%= yield :head_js %>
 </head>
 <body>
 
-  <div class="lightbox">
-    <div class="viewport">
-      <div id="scroll-viewport-left"></div>
-      <div id="scroll-viewport-right"></div>
-      <ul class="clearfix"></ul>
-    </div>
-  </div>
+  <section id="lightbox"></section>
   <header>
     <h1><%= image_tag "car_icon.png" %>TOMMY'S CARS</h1>
 
