--- a/app/views/users/_dashboard.html.erb
+++ b/app/views/users/_dashboard.html.erb
@@ -2,9 +2,17 @@
 
 <%= link_to "Sell a car!", new_listing_url %>
 
-<% if @user.listings.empty? %>
-  <h2>You don't have any cars for sale</h2>
+<% if @user.listings.length == 0 %>
+  <h2>Your don't have any cars for sale</h2>
 <% else %>
   <h2>Your <%= "listing".pluralize(@user.listings.count) %></h2>
-  <%= render @user.listings %>
+  <%= render @user.listings.includes([:pics, :make, :model, :zip, :main_pic]) %>
 <% end %>
+
+<% if @user.favorited_listings.length == 0 %>
+  <h2>You haven't favorited any listings!</h2>
+<% else %>
+  <h2>Favorited Listings (<%= @user.favorited_listings.length %>)</h2>
+  <%= render @user.favorited_listings.includes([:pics, :make, :model, :zip, :main_pic]) %>
+<% end %>
+
