--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,6 @@
   <%= csrf_meta_tags %>
 
   <link href="//netdna.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
-  <!-- <script type="text/javascript" src="http://www.google.com/recaptcha/api/js/recaptcha_ajax.js"></script> -->
   <%= yield :head_js %>
 </head>
 <body>
@@ -44,14 +43,16 @@
 
     <nav>
       <ul>
-        <li><%= link_to "HOME", root_url %></li>
+        <li><a href="<%= root_url %>" class="home">HOME</a></li>
         <li><a href="#">about</a></li>
         <li><%= link_to "sell your car", new_listing_url %></li>
         <li>
           <% if user_signed_in? %>
-            <%= link_to("DASHBOARD", current_user) %>
+            <a href="<%= user_url(current_user) %>" class="dashboard">
+              DASHBOARD
+            </a>
           <% else %>
-            <%= link_to("sign IN", new_user_session_url) %>
+            <a href="<%= new_user_session_url %>">SIGN IN</a>
           <% end %>
         </li>
       <ul>
