Add deal ratio.

--- a/app/assets/templates/listings/list_item.jst.ejs
+++ b/app/assets/templates/listings/list_item.jst.ejs
@@ -27,7 +27,12 @@
     <a href="#/listings/<%= listing.id %>" class="listing-show">
       <%= listing.get('ymm') %>
     </a>
-    <div class="price"><%= listing.price() %></div>
+    <div class="price">
+      <% if (listing.get('deal_ratio')) { %>
+      Deal: <%= listing.get('deal_ratio') %>%
+      <% } %>
+
+      <%= listing.price() %></div>
   </h3>
 
   <h4 class="line">
