--- a/app/assets/stylesheets/listing_show.css.scss
+++ b/app/assets/stylesheets/listing_show.css.scss
@@ -11,7 +11,7 @@ section.top-info {
   margin: 30px 0;
 }
 
-section.pics {
+.pics {
   display: block;
   width: 448px;
   border: 6px solid #333333;
@@ -20,7 +20,7 @@ section.pics {
   float: left;
 }
 
-section.top-info > section.pics > div.main-pic {
+section.top-info > .pics > .main-pic {
   width: 428px;
   padding: 10px 10px 10px 10px;
   border-bottom: 1px solid #333333;
@@ -39,7 +39,7 @@ img.car-pic:hover {
 section.pics > ul.thumbs {
   list-style: none;
   display: block;
-  margin: 8px;
+  margin: 6px 10px;
 }
 
 ul.thumbs > li {
@@ -201,9 +201,6 @@ div.image-file-input-wrapper.errors > .errors {
 }
 
 
-
-
-
 ul.thumbs > li > div {
   display: block;
 }
@@ -254,96 +251,3 @@ section.description textarea#listing_description {
   width: 99%;
   font-size: 15px;
 }
-
-.info #recaptcha_widget {
-  display: block !important;
-}
-
-.info form.phone {
-  display: none !important;
-  clear: both;
-  background-color: white;
-  padding: 5px;
-  border: 1px solid #cccccc;
-  width: 100%;
-}
-
-.info form.phone.show {
-  display: block !important;
-}
-
-.info .recaptcha-widget-main {
-  float: left;
-  width: 248px;
-}
-
-.info #recaptcha_image {
-  width: 240px !important;
-  height: 53px !important;
-  display: block !important;
-  border: 1px solid #eeeeee;
-  padding: 5px 3px;
-}
-
-#recaptcha_image span {
-  margin-left: 0;
-}
-
-#recaptcha_widget br {
-  display: none;
-}
-
-.info #recaptcha_widget label {
-  font-size: 15px;
-  width: 100%;
-}
-
-.info #recaptcha_image img {
-  width: 100%;
-  height: 100%;
-}
-
-.info #recaptcha_widget input[type="submit"] {
-  display: block;
-  float: left;
-  font-size: 14px;
-  margin: 0;
-  border-bottom: 0;
-}
-
-.info #recaptcha_response_field {
-  margin: 0 4px 0 0;
-  display: block;
-  float: left;
-  font-size: 14px;
-}
-
-.info .recaptcha_only_if_incorrect_sol {
-  display: none;
-  color: red;
-  font-weight: 900;
-}
-
-.info #recaptcha_widget nav {
-  width: 22px;
-  float: left;
-  text-align: center;
-}
-
-.info #recaptcha_widget nav i {
-  margin: 0px;
-}
-
-form.phone .spinner {
-  display: none;
-  float: left;
-  width: 22px;
-  margin: 0 0 0 5px;
-}
-
-form.phone.busy .spinner {
-  display: block;
-}
-
-
-
