--- a/app/assets/templates/listings/index/index_container.jst.ejs
+++ b/app/assets/templates/listings/index/index_container.jst.ejs
@@ -1,4 +1,4 @@
 <section id="sidebar">
 </section>
 
-<section id="search-results" class="clear-fix"></section>
+<section id="main-content" class="clear-fix"></section>
