--- a/app/assets/templates/listings/index/search_results.jst.ejs
+++ b/app/assets/templates/listings/index/search_results.jst.ejs
@@ -14,7 +14,7 @@
 
 <h2 id="end-of-page">
   Fetching more listings
-  <img alt="ajax-loader" src="assets/ajax-loader.gif">
+  <img alt="ajax-loader" src="<%= CarListing.spinnerURL %>">
 </h2>
 
 <h2 id="end-of-list">END OF LIST</h2>
