--- a/app/assets/templates/listings/show/container.jst.ejs
+++ b/app/assets/templates/listings/show/container.jst.ejs
@@ -1,6 +1,8 @@
-<h1><%= listing.get('ymm') %></h1>
+<header class="page-header">
+  <h1><%= listing.get('ymm') %></h1>
 
-<h3><%= listing.escape('title') %></h3>
+  <h3><%= listing.escape('title') %></h3>
+</header>
 
 <section class="top-info clear-fix">
   <section class="pics">
