--- a/app/assets/templates/users/dashboard.jst.ejs
+++ b/app/assets/templates/users/dashboard.jst.ejs
@@ -1,4 +1,6 @@
-<h1><%= user.name() %>'s Dashboard</h1>
+<header class="page-header">
+  <h1><%= user.name() %>'s Dashboard</h1>
+</header>
 
 
 <section id="sidebar">
